build(next): add bundle analyzer and botid integration
This commit adds @next/bundle-analyzer and botid packages to enable
bundle analysis and bot detection capabilities. The next.config.mjs
is updated to wrap the configuration with both plugins, allowing
bundle analysis when ANALYZE env var is true and integrating botid
functionality. This improves development tooling and bot handling
without changing the core application behavior.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^16.0.7",
     "@serwist/turbopack": "10.0.0-preview.14",
+    "botid": "^1.5.10",
     "next": "16.0.7",
     "react": "19.2.1",
     "react-dom": "19.2.1",
