--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^16.0.7",
-    "@serwist/turbopack": "10.0.0-preview.14",
+    "@next/bundle-analyzer": "16.1.0",
     "botid": "^1.5.10",
-    "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "serwist": "10.0.0-preview.14"
+    "next": "16.1.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@serwist/turbopack": "^9.3.0",
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
-    "esbuild-wasm": "0.27.0",
+    "esbuild-wasm": "^0.27.2",
+    "serwist": "^9.3.0",
     "typescript": "5.9.3"
   },
   "pnpm": {
